// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HistoryTabs should change the selected item on tab click 1`] = `
<Content
  name="two"
>
  <div>
    two
  </div>
</Content>
`;

exports[`HistoryTabs should change the selected item on tab click 2`] = `
<Content
  name="three"
>
  <div>
    three
  </div>
</Content>
`;

exports[`HistoryTabs should render correctly 1`] = `
<React.Fragment>
  <EuiTabs
    expand={false}
    size="m"
  >
    <EuiTab
      disabled={false}
      isSelected={false}
      key="/one--One"
      onClick={[Function]}
    >
      One
    </EuiTab>
    <EuiTab
      disabled={false}
      isSelected={true}
      key="/two--Two"
      onClick={[Function]}
    >
      Two
    </EuiTab>
    <EuiTab
      disabled={false}
      isSelected={false}
      key="/three--Three"
      onClick={[Function]}
    >
      Three
    </EuiTab>
  </EuiTabs>
  <Route
    component={[Function]}
    key="/one"
    path="/one"
  />
  <Route
    component={[Function]}
    key="/two"
    path="/two"
  />
  <Route
    component={[Function]}
    key="/three"
    path="/three"
  />
</React.Fragment>
`;
